# Analitik-kube

./: README.md  app.py  app_2.py  app_3_na_odnoi.py  app_3_na_odnoi_2.py  app_4.py  app_5.py  app_6.py  app_transport_1 (1).py  pyproject.toml  requirements.txt  settings.json
modules/: data_loader.py
tests/: conftest.py  test_basic.py  test_data_loader.py
